[package]
name = "wart_rs"
version = "0.0.3"
authors = ["Mark Vasilkov (https://github.com/mvasilkov)"]
description = "WebAssembly Text Format (WAT) lexer from the wast crate, compiled to WebAssembly for use in JavaScript."
repository = "https://github.com/mvasilkov/wart"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"

[dependencies]
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
wast = "67.0.1"
